--- a/zyng-grid.css
+++ b/zyng-grid.css
@@ -38,3 +38,138 @@ canvas {
 
 /*---------- The grid ----------*/
 
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin: 0 auto;
+
+}
+
+/* portrait phones, small devices */
+@media (max-width: 579px) {
+  .container {
+    max-width: 100%;
+  }
+}
+
+/* landscape phones */
+@media (min-width: 580px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+/* tablets */
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+/* laptops/desktops */
+@media (min-width: 1024px) {
+  .container {
+    max-width: 980px;
+  }
+}
+
+/* large desktops */
+@media (min-width: 1366px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+/* xl desktops */
+@media (min-width: 1920px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+/* xxl desktops */
+@media (min-width: 2560px) {
+  .container {
+    max-width: 1440px;
+  }
+}
+
+.row {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	margin-right: -15px;
+	margin-left: -15px;
+}
+
+.col-1 {
+	width: 8.33%;
+}
+
+.col-2 {
+	width: 16.66%;
+}
+
+.col-3 {
+	width: 25%;
+}
+
+.col-4 {
+	width: 33.33%;
+}
+
+.col-5 {
+	width: 41.66%;
+}
+
+.col-6 {
+	width: 50%;
+}
+
+.col-7 {
+	width: 58.33%;
+}
+
+.col-8 {
+	width: 66.66%;
+}
+
+.col-9 {
+	width: 75%;
+}
+
+.col-10 {
+	width: 83.33%;
+}
+
+.col-11 {
+	width: 91.66%;
+}
+
+.col-12 {
+	width: 100%;
+}
+
+
+/*---------- Other sizing ----------*/
+
+img,
+object,
+video,
+embed {
+	max-width: 100%;
+}
+
+
+/*---------- Utility Classes ----------*/
+
+.temp-border {
+	border: 1px solid aqua;
+}
+
+
+/*---------- Basic styling ----------*/
+
+
